--- a/debian/control
+++ b/debian/control
@@ -130,6 +130,22 @@ Description: NVIDIA binary Xorg driver${nvidia:LegacyDesc}
  See /usr/share/doc/${nvidia}-driver/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
 
+Package: libglvnd-nvidia
+Architecture: i386 amd64 armhf
+Multi-Arch: same
+Pre-Depends:
+ ${misc:Pre-Depends}
+Depends:
+ ${shlibs:Depends}, ${misc:Depends}
+Description: NVIDIA binary GL vendor neutral libraries${nvidia:LegacyDesc}
+ The vendor neutral dispatch library for OpenGL (libglvnd).
+ The goal for libglvnd is to allow multiple OpenGL implementations from 
+ different vendors to coexist on the same system, without interfering 
+ with each other or requiring any manual configuration.
+ .
+ This package contains the binary libraries libGLdispatch.so.0 and
+ libOpenGL.so.0 as shipped by NVIDIA.
+
 #Package: libgl1-${nvidia}-glx
 Package: libgl1-nvidia-glx
 Architecture: i386 amd64 armhf
@@ -196,24 +212,6 @@ Description: NVIDIA binary EGL libraries${nvidia:LegacyDesc}
  This package contains the EGL native platform graphics interface library.
  EGL provides a platform-agnostic mechanism for creating rendering surfaces
  for use with other graphics libraries, such as OpenGL|ES and OpenVG.
- .
- See the description of the ${nvidia}-driver package
- or /usr/share/doc/libgl1-${nvidia}-glx/README.txt.gz
- for a complete list of supported GPUs and PCI IDs.
-
-#Package: libglvnd-${nvidia}
-Package: libglvnd-nvidia
-Architecture: i386 amd64 armhf
-Multi-Arch: same
-Pre-Depends:
- ${misc:Pre-Depends}
-Depends:
- ${nvidia-alternative},
- ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA binary GL vendor neutral libraries${nvidia:LegacyDesc}
- This package contains the vendor neutral graphics libraries.
- These libraries are currently used to provide full OpenGL dispatching support
- to NVIDIA's implementation of EGL.
  .
  See the description of the ${nvidia}-driver package
  or /usr/share/doc/libgl1-${nvidia}-glx/README.txt.gz
