--- a/debian/libglvnd-nvidia.install.in
+++ b/debian/libglvnd-nvidia.install.in
@@ -1,2 +1,2 @@
-libGLdispatch.so.0		#LIBDIR#/#PRIVATE#/
-libOpenGL.so.0		#LIBDIR#/#PRIVATE#/
+libGLdispatch.so.0	#LIBDIR#/
+libOpenGL.so.0		#LIBDIR#/
