--- a/debian/libglvnd-nvidia.lintian-overrides.in
+++ b/debian/libglvnd-nvidia.lintian-overrides.in
@@ -5,5 +5,6 @@ hardening-no-fortify-functions
 hardening-no-relro
 hardening-no-stackprotector
 
-# Lintian and debhelper disagree w.r.t a library in a private directory.
-postinst-has-useless-call-to-ldconfig
+# These are expected to be built from source and packaged independently
+# from the NVIDIA drivers, soon.
+package-name-doesnt-match-sonames libGLdispatch0 libOpenGL0
