--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -2,6 +2,7 @@ use-kbuild-compiler.patch
 disable_nvidia_conftest.patch
 #HAS_UVM#disable_uvm_conftest.patch
 conditionally-include-linux_version.h.patch
+use-nv-kernel-ARCH.o_shipped.patch
 avoid-ld.gold.patch
 include-swiotlb-header-on-arm.patch
 ignore_xen_on_arm.patch
