cleanup after merge
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/358@6078 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-modprobe.conf.in
+++ b/debian/nvidia-modprobe.conf.in
@@ -1,4 +1,6 @@
-install nvidia modprobe -i #MODULE# $CMDLINE_OPTS ; modprobe -i nvidia-modeset $CMDLINE_OPTS
+install nvidia modprobe -i #MODULE# $CMDLINE_OPTS
+
+install nvidia-modeset modprobe nvidia ; modprobe -i #MODULE#-modeset $CMDLINE_OPTS
 
 #HAS_UVM#install nvidia-uvm modprobe nvidia ; modprobe -i #MODULE#-uvm $CMDLINE_OPTS
 
