dump dynamically generated conftest headers
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/355@6081 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -1,4 +1,5 @@
 use-kbuild-compiler.patch
+conftest-verbose.patch
 disable_nvidia_conftest.patch
 #HAS_UVM#disable_uvm_conftest.patch
 conditionally-include-linux_version.h.patch
