--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -4,6 +4,7 @@ disable_modeset_conftest.patch
 #HAS_UVM#disable_uvm_conftest.patch
 conditionally-include-linux_version.h.patch
 use-nv-kernel-ARCH.o_shipped.patch
+nvidia-modeset-use-ARCH.o_binary.patch
 avoid-ld.gold.patch
 include-swiotlb-header-on-arm.patch
 ignore_xen_on_arm.patch
