--- a/debian/module/debian/rules.in
+++ b/debian/module/debian/rules.in
@@ -47,6 +47,7 @@ build-stamp: configure-stamp
 	dh_quilt_patch
 	$(MAKE) SYSSRC=$(KSRC) modules
 	test "#MODULE#" = "nvidia" || mv nvidia.ko #MODULE#.ko
+	test "#MODULE#" = "nvidia" || mv nvidia-modeset.ko #MODULE#-modeset.ko
 #HAS_UVM#	test "#MODULE#" = "nvidia" || mv nvidia-uvm.ko #MODULE#-uvm.ko
 	touch $@
 
