rename patch for consistency
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/355@6091 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -1,6 +1,6 @@
 use-kbuild-compiler.patch
 conftest-verbose.patch
-use-nv-kernel-ARCH.o_shipped.patch
+nvidia-use-ARCH.o_binary.patch
 avoid-ld.gold.patch
 include-swiotlb-header-on-arm.patch
 ignore_xen_on_arm.patch
