--- a/debian/libnvidia-eglcore.lintian-overrides.in
+++ b/debian/libnvidia-eglcore.lintian-overrides.in
@@ -2,6 +2,7 @@
 [!amd64]: binary-file-built-without-LFS-support
 [i386]: shlib-with-non-pic-code
 spelling-error-in-binary
+hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-relro
 hardening-no-stackprotector
