When dkms installs nvidia-modeset make it use $PACKAGE_NAME so that it uses current|legacy-xxx
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/358@6111 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-kernel-dkms.dkms.in
+++ b/debian/nvidia-kernel-dkms.dkms.in
@@ -14,7 +14,7 @@ MAKE[0]="unset ARCH; env CCACHE_DISABLE=1 NV_VERBOSE=1 \
 CLEAN="make KERNEL_UNAME=${kernelver} clean"
 
 BUILT_MODULE_NAME[1]="nvidia-modeset"
-DEST_MODULE_NAME[1]="nvidia-modeset"
+DEST_MODULE_NAME[1]="$PACKAGE_NAME-modeset"
 DEST_MODULE_LOCATION[1]="/updates/dkms"
 
 #HAS_UVM#BUILT_MODULE_NAME[2]="nvidia-uvm"
