Fix typo in d/rules unload_modules list (nvidia-modprobe -> nvidia-modeset)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/358@6112 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -40,7 +40,7 @@ dirname_armhf		 = $(NVIDIA_DIRNAME_armhf)
 
 # this needs the internal names (i.e. upstream's names, not our renamed files)
 unload_modules		 =
-unload_modules		+= nvidia-modprobe
+unload_modules		+= nvidia-modeset
 unload_modules		+= $(if $(has_uvm),nvidia-uvm)
 unload_modules		+= nvidia
 
