--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -1,4 +1,5 @@
 use-kbuild-compiler.patch
+conftest-verbose.patch
 not-silent.patch
 use-nv-kernel-ARCH.o_shipped.patch
 conditionally-include-linux_version.h.patch
