--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -1,5 +1,6 @@
 use-kbuild-compiler.patch
 conftest-verbose.patch
+conftest-via-kbuild.patch
 not-silent.patch
 use-nv-kernel-ARCH.o_shipped.patch
 conditionally-include-linux_version.h.patch
