don't rename upstream's Makefile to Kbuild
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@6120 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/rules.in
+++ b/debian/module/debian/rules.in
@@ -43,8 +43,8 @@ build-indep:
 build-stamp: configure-stamp
 	dh_prep
 	dh_quilt_patch
-	$(MAKE) SYSSRC=$(KSRC)
-#HAS_UVM#	$(MAKE) -C uvm SYSSRC=$(KSRC)
+	$(MAKE) module SYSSRC=$(KSRC)
+#HAS_UVM#	$(MAKE) -C uvm module SYSSRC=$(KSRC) KBUILD_EXTMOD=$(CURDIR)/uvm
 	test "#MODULE#" = "nvidia" || mv nvidia.ko #MODULE#.ko
 #HAS_UVM#	test "#MODULE#" = "nvidia" || mv uvm/nvidia-uvm.ko uvm/#MODULE#-uvm.ko
 	touch $@
