--- a/debian/nvidia-kernel-dkms.dkms.in
+++ b/debian/nvidia-kernel-dkms.dkms.in
@@ -10,7 +10,7 @@ DEST_MODULE_LOCATION[0]="/updates/dkms"
 AUTOINSTALL=yes
 
 MAKE[0]="env CCACHE_DISABLE=1 \
-    make -C . SYSSRC=${kernel_source_dir}"
+    make -C . module SYSSRC=${kernel_source_dir}"
 CLEAN="make -C . SYSSRC=${kernel_source_dir} clean"
 
 #HAS_UVM#BUILT_MODULE_NAME[1]="nvidia-uvm"
@@ -18,5 +18,5 @@ CLEAN="make -C . SYSSRC=${kernel_source_dir} clean"
 #HAS_UVM#DEST_MODULE_NAME[1]="$PACKAGE_NAME-uvm"
 #HAS_UVM#DEST_MODULE_LOCATION[1]="/updates/dkms"
 #HAS_UVM#MAKE[0]+="; env CCACHE_DISABLE=1 \
-#HAS_UVM#    make -C uvm SYSSRC=${kernel_source_dir}"
+#HAS_UVM#    make -C uvm module SYSSRC=${kernel_source_dir} KBUILD_EXTMOD=${dkms_tree}/${PACKAGE_NAME}/${PACKAGE_VERSION}/build/uvm"
 #HAS_UVM#CLEAN+="; make -C uvm SYSSRC=${kernel_source_dir} clean"
