clear ARCH from the environment before dkms build
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@6124 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-kernel-dkms.dkms.in
+++ b/debian/nvidia-kernel-dkms.dkms.in
@@ -9,7 +9,7 @@ DEST_MODULE_NAME[0]="$PACKAGE_NAME"
 DEST_MODULE_LOCATION[0]="/updates/dkms"
 AUTOINSTALL=yes
 
-MAKE[0]="env CCACHE_DISABLE=1 NV_VERBOSE=1 \
+MAKE[0]="unset ARCH; env CCACHE_DISABLE=1 NV_VERBOSE=1 \
     make module KERNEL_UNAME=${kernelver}"
 CLEAN="make KERNEL_UNAME=${kernelver} clean"
 
