--- a/debian/control
+++ b/debian/control
@@ -30,6 +30,8 @@ Pre-Depends:
 Depends:
  libgl1-${nvidia}-glx (= ${binary:Version}),
  libegl1-${nvidia} (= ${binary:Version}),
+ libgles1-${nvidia} (= ${binary:Version}),
+ libgles-${nvidia}1 (= ${binary:Version}),
  ${nvidia}-driver-bin (= ${binary:Version}),
  xserver-xorg-video-${nvidia} (= ${binary:Version}),
  ${nvidia}-vdpau-driver (= ${binary:Version}),
@@ -243,6 +245,31 @@ Description: NVIDIA binary EGL libraries${nvidia:LegacyDesc}
 
 #Package: libgles1-${nvidia}
 Package: libgles1-nvidia
+Architecture: i386 amd64 armhf
+Multi-Arch: same
+Pre-Depends:
+ ${misc:Pre-Depends}
+Depends:
+ ${nvidia-alternative} (= ${binary:Version}),
+ libglvnd-nvidia,
+ ${shlibs:Depends}, ${misc:Depends}
+Description: NVIDIA binary OpenGL|ES 1.x stub libraries${nvidia:LegacyDesc}
+ OpenGL|ES is a cross-platform API for full-function 2D and 3D graphics on
+ embedded systems - including consoles, phones, appliances and vehicles.
+ It contains a subset of OpenGL plus a number of extensions for the
+ special needs of embedded systems.
+ .
+ OpenGL|ES 1.x provides an API for fixed-function hardware.
+ .
+ See the description of the ${nvidia}-driver package
+ or /usr/share/doc/libgl1-${nvidia}-glx/README.txt.gz
+ for a complete list of supported GPUs and PCI IDs.
+ .
+ This package contains a libGLESv1_CM.so.1 stub that redirects to a vendor
+ implementation via libglvnd.
+
+#Package: libgles-${nvidia}1
+Package: libgles-nvidia1
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
