--- a/debian/control
+++ b/debian/control
@@ -706,6 +706,21 @@ Description: NVIDIA runtime compiler library
  .
  This package contains the runtime compiler library.
 
+#Package: lib${nvidia}-fatbinaryloader
+Package: libnvidia-fatbinaryloader
+Architecture: i386 amd64
+Multi-Arch: same
+Pre-Depends:
+ ${misc:Pre-Depends}
+Depends:
+ ${shlibs:Depends}, ${misc:Depends},
+Description: NVIDIA FAT binary loader
+ The Compute Unified Device Architecture (CUDA) enables NVIDIA
+ graphics processing units (GPUs) to be used for massively parallel
+ general purpose computation.
+ .
+ This package contains the FAT multiarchitecture binary loader.
+
 #Package: lib${nvidia}-nvcuvid1
 Package: libnvcuvid1
 Architecture: i386 amd64 armhf
