--- a/debian/libgl1-nvidia-glx.links.in
+++ b/debian/libgl1-nvidia-glx.links.in
@@ -1,1 +1,2 @@
+#LIBDIR#/#PRIVATE#/libGL.so.1.0.0                 #LIBDIR#/#PRIVATE#/libGL.so.1
 #LIBDIR#/#PRIVATE#/libnvidia-cfg.so.#VERSION#		#LIBDIR#/#PRIVATE#/libnvidia-cfg.so.1
