libGLX is not shipped for ARM, so mark libglx0-nvidia and libglx-nvidia0 as i386 and amd64 only
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/361@6145 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -344,7 +344,7 @@ Description: NVIDIA binary OpenGL|ES 2.x libraries${nvidia:LegacyDesc}
 
 #Package: libglx0-${nvidia}
 Package: libglx0-nvidia
-Architecture: i386 amd64 armhf
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
@@ -366,7 +366,7 @@ Description: NVIDIA binary GLX stub libraries${nvidia:LegacyDesc}
 
 #Package: libglx-${nvidia}0
 Package: libglx-nvidia0
-Architecture: i386 amd64 armhf
+Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends:
  ${misc:Pre-Depends}
