more pre-depends
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@6155 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -430,6 +430,7 @@ Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
  nvidia-installer-cleanup,
+ ${nvidia-legacy-check},
  ${misc:Pre-Depends}
 Depends:
  libvdpau1 (>= 0.9),
@@ -506,6 +507,7 @@ Package: libcuda1
 Architecture: i386 amd64 armhf
 Multi-Arch: same
 Pre-Depends:
+ ${nvidia-legacy-check},
  ${misc:Pre-Depends}
 Depends:
  nvidia-support,
