more ppc64el support
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@6161 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,7 @@ Build-Depends:
  debhelper (>= 9),
  xz-utils,
  dkms,
- libxext6,
+ libxext6 [!ppc64el],
  quilt,
  po-debconf,
 Standards-Version: 3.9.7
@@ -753,7 +753,7 @@ Description: NVIDIA OpenCL ICD Loader library
 
 Package: nvidia-detect
 Section: non-free/x11
-Architecture: i386 amd64 armhf ppc64el
+Architecture: i386 amd64 armhf
 Depends:
  pciutils,
  ${misc:Depends}
