--- a/debian/libgles1-nvidia.lintian-overrides.in
+++ b/debian/libgles1-nvidia.lintian-overrides.in
@@ -2,7 +2,7 @@
 [!amd64]: binary-file-built-without-LFS-support
 hardening-no-bindnow
 hardening-no-fortify-functions
-hardening-no-pie
+[!amd64]: hardening-no-pie
 hardening-no-relro
 hardening-no-stackprotector
 
