--- a/debian/control
+++ b/debian/control
@@ -160,7 +160,7 @@ Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA binary GL vendor neutral libraries${nvidia:LegacyDesc}
+Description: NVIDIA binary GL vendor neutral libraries
  The vendor neutral dispatch library for OpenGL (libglvnd).
  The goal for libglvnd is to allow multiple OpenGL implementations from 
  different vendors to coexist on the same system, without interfering 
@@ -219,7 +219,6 @@ Description: NVIDIA binary OpenGL 32-bit libraries${nvidia:LegacyDesc}
  OpenGL libraries when installing libgl1-${nvidia}-glx
  on amd64 with foreign architecture i386 enabled.
 
-#Package: libegl1-${nvidia}
 Package: libegl1-nvidia
 Architecture: i386 amd64 armhf
 Multi-Arch: same
@@ -229,7 +228,7 @@ Depends:
  ${nvidia-alternative} (= ${binary:Version}),
  libglvnd-nvidia,
  ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA binary EGL stub libraries${nvidia:LegacyDesc}
+Description: NVIDIA binary EGL stub libraries
  This package contains the EGL native platform graphics interface library.
  EGL provides a platform-agnostic mechanism for creating rendering surfaces
  for use with other graphics libraries, such as OpenGL|ES and OpenVG.
@@ -263,7 +262,6 @@ Description: NVIDIA binary EGL libraries${nvidia:LegacyDesc}
  This package contains the driver specific binary EGL implementation by NVIDIA
  that is accessed via libglvnd.
 
-#Package: libgles1-${nvidia}
 Package: libgles1-nvidia
 Architecture: i386 amd64 armhf
 Multi-Arch: same
@@ -273,7 +271,7 @@ Depends:
  ${nvidia-alternative} (= ${binary:Version}),
  libglvnd-nvidia,
  ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA binary OpenGL|ES 1.x stub libraries${nvidia:LegacyDesc}
+Description: NVIDIA binary OpenGL|ES 1.x stub libraries
  OpenGL|ES is a cross-platform API for full-function 2D and 3D graphics on
  embedded systems - including consoles, phones, appliances and vehicles.
  It contains a subset of OpenGL plus a number of extensions for the
@@ -309,8 +307,10 @@ Description: NVIDIA binary OpenGL|ES 1.x libraries${nvidia:LegacyDesc}
  See the description of the ${nvidia}-driver package
  or /usr/share/doc/libgl1-${nvidia}-glx/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
+ .
+ This package contains the driver specific binary OpenGL|ES 1.x implementation
+ by NVIDIA that is accessed via libglvnd.
 
-#Package: libgles2-${nvidia}
 Package: libgles2-nvidia
 Architecture: i386 amd64 armhf
 Multi-Arch: same
@@ -320,7 +320,7 @@ Depends:
  ${nvidia-alternative} (= ${binary:Version}),
  libglvnd-nvidia,
  ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA binary OpenGL|ES 2.x libraries${nvidia:LegacyDesc}
+Description: NVIDIA binary OpenGL|ES 2.x stub libraries
  OpenGL|ES is a cross-platform API for full-function 2D and 3D graphics on
  embedded systems - including consoles, phones, appliances and vehicles.
  It contains a subset of OpenGL plus a number of extensions for the
@@ -358,8 +358,10 @@ Description: NVIDIA binary OpenGL|ES 2.x libraries${nvidia:LegacyDesc}
  See the description of the ${nvidia}-driver package
  or /usr/share/doc/libgl1-${nvidia}-glx/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
+ .
+ This package contains the driver specific binary OpenGL|ES 2.x implementation
+ by NVIDIA that is accessed via libglvnd.
 
-#Package: libglx0-${nvidia}
 Package: libglx0-nvidia
 Architecture: i386 amd64
 Multi-Arch: same
@@ -369,10 +371,9 @@ Depends:
  ${nvidia-alternative} (= ${binary:Version}),
  libglvnd-nvidia,
  ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA binary GLX stub libraries${nvidia:LegacyDesc}
- This package contains the EGL native platform graphics interface library.
- EGL provides a platform-agnostic mechanism for creating rendering surfaces
- for use with other graphics libraries, such as OpenGL|ES and OpenVG.
+Description: NVIDIA binary GLX stub libraries
+ GLX ("OpenGL Extension to the X Window System") provides an interface between
+ OpenGL and the X Window System as well as extensions to OpenGL itself.
  .
  See the description of the ${nvidia}-driver package
  or /usr/share/doc/libgl1-${nvidia}-glx/README.txt.gz
@@ -392,9 +393,8 @@ Depends:
  libgl1-${nvidia}-glx (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Description: NVIDIA binary GLX libraries${nvidia:LegacyDesc}
- This package contains the EGL native platform graphics interface library.
- EGL provides a platform-agnostic mechanism for creating rendering surfaces
- for use with other graphics libraries, such as OpenGL|ES and OpenVG.
+ GLX ("OpenGL Extension to the X Window System") provides an interface between
+ OpenGL and the X Window System as well as extensions to OpenGL itself.
  .
  See the description of the ${nvidia}-driver package
  or /usr/share/doc/libgl1-${nvidia}-glx/README.txt.gz
