--- a/debian/libgl1-nvidia-glx.lintian-overrides.in
+++ b/debian/libgl1-nvidia-glx.lintian-overrides.in
@@ -1,6 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
 [!amd64]: binary-file-built-without-LFS-support
-shlib-calls-exit
+[armhf]: shlib-calls-exit
 [i386]: shlib-with-non-pic-code
 spelling-error-in-binary
 hardening-no-bindnow
