--- a/debian/libglvnd-nvidia.lintian-overrides.in
+++ b/debian/libglvnd-nvidia.lintian-overrides.in
@@ -1,6 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
 [!amd64]: binary-file-built-without-LFS-support
-shlib-with-non-pic-code
+[!amd64]: shlib-with-non-pic-code
 hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-relro
