--- a/debian/libglx-nvidia0.lintian-overrides.in
+++ b/debian/libglx-nvidia0.lintian-overrides.in
@@ -1,5 +1,7 @@
 # The NVIDIA license does not allow any form of modification.
 [!amd64]: binary-file-built-without-LFS-support
+shlib-calls-exit
+[!amd64]: shlib-with-non-pic-code
 hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-relro
