--- a/debian/libnvidia-ptxjitcompiler.lintian-overrides.in
+++ b/debian/libnvidia-ptxjitcompiler.lintian-overrides.in
@@ -1,8 +1,7 @@
 # The NVIDIA license does not allow any form of modification.
 [i386]: binary-file-built-without-LFS-support
-binary-has-unneeded-section
-[i386]: shlib-with-non-pic-code
-spelling-error-in-binary
+shlib-calls-exit
+[i386]: spelling-error-in-binary
 hardening-no-bindnow
 hardening-no-fortify-functions
 hardening-no-relro
